ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: my-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: wordpress 
                port: 
                  number: 80
